modified:   cloudhistory-ec2.yml 	modified:   templates/update_accountdata_to_db.j2 	modified:   templates/update_imagedata_to_db.j2 	modified:   templates/update_instancedata_to_db.j2 	modified:   vars/euca-dw.yml removed cloudhistdb from variables

--- a/templates/update_imagedata_to_db.j2
+++ b/templates/update_imagedata_to_db.j2
@@ -11,5 +11,5 @@ else
         tidy -xml -i -q -w 0 -o {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_images.xml < {{ eemonhome }}/cloudhistory/euca-describe-images_$CLOUDNAME\.xml
         sed -i 1i"<root>" $CLOUDNAME\_tidy_images.xml
         echo "</root>" >> $CLOUDNAME\_tidy_images.xml
-        {{ eemonhome }}/cloudhistory/readinsertimages.py -n $CLOUDNAME\history -p {{ eemondbpasswd }} -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_images.xml
+        {{ eemonhome }}/cloudhistory/readinsertimages.py -n $CLOUDNAME -p {{ eemondbpasswd }} -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_images.xml
 fi
