--- a/templates/update_instancedata_to_db.j2
+++ b/templates/update_instancedata_to_db.j2
@@ -9,5 +9,5 @@ else
 	source {{ eemonhome }}/cloudhistory/.euca_$CLOUDNAME\_admin/eucarc
 	euca-describe-instances verbose --debug 2> {{ eemonhome }}/cloudhistory/euca-describe-instances_verbose_$CLOUDNAME\.xml
 	tidy -xml -i -q  -w 0 -o {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_instances.xml < {{ eemonhome }}/cloudhistory/euca-describe-instances_verbose_$CLOUDNAME\.xml
-	{{ eemonhome }}/cloudhistory/readinsertinstances.py -n $CLOUDNAME\history -p {{ eemondbpasswd }} -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_instances.xml
+	{{ eemonhome }}/cloudhistory/readinsertinstances.py -n $CLOUDNAME -p {{ eemondbpasswd }} -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_instances.xml
 fi
