--- a/templates/update_accountdata_to_db.j2
+++ b/templates/update_accountdata_to_db.j2
@@ -10,5 +10,5 @@ else
         source {{ eemonhome }}/cloudhistory/.euca_$CLOUDNAME\_admin/eucarc
         euare-accountlist --debug 2> {{ eemonhome }}/cloudhistory/euare-accountlist_$CLOUDNAME\.xml
         tidy -xml -i -q -w 0 -o {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_accountlist.xml < {{ eemonhome }}/cloudhistory/euare-accountlist_$CLOUDNAME\.xml
-        {{ eemonhome }}/cloudhistory/readinsertaccounts.py -n $CLOUDNAME\history -p h1st0ry -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_accountlist.xml
+        {{ eemonhome }}/cloudhistory/readinsertaccounts.py -n $CLOUDNAME -p {{ eemondbpasswd }} -port={{ pgport }} -x {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_accountlist.xml
 fi
