modified:   index.j2   cloudhist to cloudname

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -79,7 +79,7 @@ if (d) return { minDate: d }
 <form name="calz" method="post">
 
 <?php
-$clouds = array("host=localhost&port={{ pgport }}&cloud={{ cloudhistdb }}" );
+$clouds = array("host=localhost&port={{ pgport }}&cloud={{ cloudname }}" );
 
 $querytitle[1] = "Most started images";
 $queryarray[1] = '
