modified:   ../cloudhistory-ec2.yml  iptables 	modified:   update_imagedata_to_db.j2  -a

--- a/templates/update_imagedata_to_db.j2
+++ b/templates/update_imagedata_to_db.j2
@@ -7,7 +7,7 @@ else
         export http_proxy=
         CLOUDNAME=$1
         source {{ eemonhome }}/cloudhistory/.euca_$CLOUDNAME\_admin/eucarc
-        euca-describe-images --debug 2> {{ eemonhome }}/cloudhistory/euca-describe-images_$CLOUDNAME\.xml
+        euca-describe-images -a --debug 2> {{ eemonhome }}/cloudhistory/euca-describe-images_$CLOUDNAME\.xml
         tidy -xml -i -q -w 0 -o {{ eemonhome }}/cloudhistory/$CLOUDNAME\_tidy_images.xml < {{ eemonhome }}/cloudhistory/euca-describe-images_$CLOUDNAME\.xml
         sed -i 1i"<root>" $CLOUDNAME\_tidy_images.xml
         echo "</root>" >> $CLOUDNAME\_tidy_images.xml
